2011-09-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* general/pandora_help.php: Fixed visualization error on this view.

2011-09-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/gis_step_2.php: Changed style in titles to match
	new style pattern.
	
2011-09-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/gis_maps/configure_gis_map.php: fixed the form to create or
	update gis connections.
	
	Fixes: #3403160

2011-09-03  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_delete_alerts.php,
	godmode/massive/massive_edit_modules.php,
	operation/agentes/ver_agente.php: Added group recursion	feature,
	it allows to search agents in child groups. These three changes
	are contributed by Yusuke Arai. Thanks!

2011-09-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* install.php: Fixed css style in this view.
	
	Fixes: #3400123

2011-09-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/alerts/alert_list.list.php: Fixed css style in this view.
	
	Fixes: #3397522

2011-09-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_agents.php: Fixed function agents_get_modules()
	where modules are retrieve.

2011-09-02  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/config_process.php: set by default the mysql connection type
	because in older isntallations update to 4 have not this token in
	config.php.
	
	Fixes: #3395947

2011-09-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_alerts.php: fixed alerts_get_alert_agent_module_actions()
	function to avoid PHP warnings on alert compound display.

2011-09-02  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_add_action_alerts.php,
	godmode/massive/massive_delete_action_alerts.php: Added group recursion
	feature, it allows to search agents in child groups.

2011-09-01 Javier Lanz <javier.lanz@artica.es>

	* include/functions_filemanager.php: Improved detecting mime types

	Fixes: #3389654
